--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <td><input type="password" name="password" id="password" placeholder="Password"></td>
                         </tr>
                         <tr>
-                            <td><button type="submit" class="btn-login">Login</button></td>
+                            <td><button type="submit" class="btn-login" id="btn">Login</button></td>
                         </tr>
                         <tr>
                             <td><a href="#">Forgot password?</a></td>
@@ -38,5 +38,6 @@
                 </form>
             </div> 
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
